Migration done from java 11 to java 17